pluginsdk_delphi/bridgemain.pas


PBPMAP = ^BPMAP;
BPMAP = Packed record
    count: Integer;
    bp: PBRIDGEBP;
end;

PslFUNCTION = ^slFUNCTION;
slFUNCTION  = packed record
    start,
    slend: duint;
end;

PADDRINFO = ^ADDRINFO;
ADDRINFO = packed record
    flags: Integer; //ADDRINFOFLAGS
    module:array[0..MAX_MODULE_SIZE-1] of AChar; //module the address is in
    ilabel:array[0..MAX_LABEL_SIZE-1] of AChar;
    comment:array[0..MAX_COMMENT_SIZE-1] of AChar;
    isbookmark: Boolean;
    ifunction: slFUNCTION;
end;

//PSYMBOLINFO = ^SYMBOLINFO;
SYMBOLINFO = packed record
    addr: duint;
    decoratedSymbol: PAChar;
    undecoratedSymbol: PAChar;
end;

PSYMBOLMODULEINFO = ^SYMBOLMODULEINFO;
SYMBOLMODULEINFO = packed record
    base: duint;
    name:array[0..MAX_MODULE_SIZE-1] of AChar;
end;

PSYMBOLCBINFO = ^SYMBOLCBINFO;
SYMBOLCBINFO = packed record
    base: duint ;
    cbSymbolEnum: CBSYMBOLENUM;
    user: Pointer;
end;

PFLAGS = ^FLAGS;
FLAGS = packed record
    c,
    p,
    a,
    z,
    s,
    t,
    i,
    d,
    o: BOOL;
end;

PREGDUMP = ^REGDUMP;
REGDUMP = packed record
    cax,
    ccx,
    cdx,
    cbx,
    csp,
    cbp,
    csi,
    cdi: duint;
{$IFDEF WIN64}
    r8,
    r9,
    r10,
    r11,
    r12,
    r13,
    r14,
    r15: duint;
{$ELSE} //WIN64
    cip: duint;
    eflags: Cardinal;
    flags: FLAGS;
    gs,
    fs,
    es,
    ds,
    cs,
    ss: WORD;
    dr0,
    dr1,
    dr2,
    dr3,
    dr6,
    dr7: duint;
{$ENDIF}
end;

PDISASM_ARG = ^DISASM_ARG;
DISASM_ARG = packed record
    distype:DISASM_ARGTYPE;
    segment: SEGMENTREG;
    mnemonic:array[0..64-1] of AChar;
    constant,
    value,
    memvalue: duint;
end;

PDISASM_INSTR = ^DISASM_INSTR;
DISASM_INSTR = packed record
    instruction:array[0..64-1] of AChar;
    distype: DISASM_INSTRTYPE;
    argcount,
    instr_size: Integer;
    arg:array[0..3-1] of DISASM_ARG;
end;

PSTACK_COMMENT = ^STACK_COMMENT;
STACK_COMMENT = packed record
    color:array[0..8-1] of AChar; //hex color-code
    comment:array[0..MAX_COMMENT_SIZE-1] of AChar;
end;

PTHREADINFO = ^THREADINFO;
THREADINFO = packed record
    ThreadNumber: Integer;
    hThread: THANDLE;
    dwThreadId: DWORD;
    ThreadStartAddress,
    ThreadLocalBase: duint;
end;

PTHREADALLINFO = ^THREADALLINFO;
THREADALLINFO = packed record
    BasicInfo: THREADINFO;
    ThreadCip: duint;
    SuspendCount: DWORD;
    Priority:THREADPRIORITY;
    WaitReason: THREADWAITREASON;
    LastError: DWORD;
end;

PTHREADLIST = ^THREADLIST;
THREADLIST = packed record
    count: Integer;
    list: PTHREADALLINFO;
    CurrentThread: Integer;
end;

PMEMORY_INFO = ^MEMORY_INFO;
MEMORY_INFO = packed record
    value: ULONG_PTR; //displacement / addrvalue (rip-relative)
    size: MEMORY_SIZE; //byte/word/dword/qword
    mnemonic:array[0..MAX_MNEMONIC_SIZE-1] of AChar;
end;

PVALUE_INFO = ^VALUE_INFO;
VALUE_INFO = packed record
    value: ULONG_PTR;
    size: MEMORY_SIZE{VALUE_SIZE};
end;

PBASIC_INSTRUCTION_INFO = ^BASIC_INSTRUCTION_INFO;
BASIC_INSTRUCTION_INFO = packed record
    biitype: DWORD; //value|memory|addr
    value: VALUE_INFO; //immediat
    memory:MEMORY_INFO;
    addr:ULONG_PTR; //addrvalue (jumps + calls)
    branch: Boolean; //jumps/calls
end;

PSCRIPTBRANCH = ^SCRIPTBRANCH;
SCRIPTBRANCH = packed record
    scbtype: SCRIPTBRANCHTYPE;
    dest: Integer;
    branchlabel:array[0..256-1] of AChar;
end;

//Debugger functions
{BRIDGE_IMPEXP char*}   function DbgInit(): PAChar; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgMemRead(va:duint;dest: PByte;size: duint): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgMemWrite(va: duint; const src: PByte;size: duint): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP duint}   function DbgMemGetPageSize(base: duint): duint; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP duint}   function DbgMemFindBaseAddr(addr: duint;size: Pduint): duint; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgCmdExec(const cmd: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgCmdExecDirect(const cmd: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgMemMap(memmap: PMEMMAP): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgIsValidExpression(const expression: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgIsDebugging(): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgIsJumpGoingToExecute(addr: duint): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgGetLabelAt(addr: duint;segment:SEGMENTREG;text: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgSetLabelAt(addr: duint; const text: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgGetCommentAt(addr: duint;text: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgSetCommentAt(addr:duint; const text: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgGetBookmarkAt(addr: duint): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgSetBookmarkAt(addr: duint;isbookmark: Boolean): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgGetModuleAt(addr: duint;text: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP BPXTYPE} function DbgGetBpxTypeAt(addr: duint): BPXTYPE; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP duint}   function DbgValFromString(const szstring: PAChar): duint; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgGetRegDump(regdump: PREGDUMP): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgValToString(const szstring: PAChar;value: duint): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgMemIsValidReadPtr(addr: duint): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP int}     function DbgGetBpList(bptype:BPXTYPE;list: PBPMAP): Integer; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP FUNCTYPE}function DbgGetFunctionTypeAt(addr: duint): FUNCTYPE; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP LOOPTYPE}function DbgGetLoopTypeAt(addr: duint;depth: Integer): LOOPTYPE; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP duint}   function DbgGetBranchDestination(addr: duint): duint; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgFunctionOverlaps(fOstart: duint;fOend: duint): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgFunctionGet(addr: duint;fGstart: Pduint; fGend: pduint): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgScriptLoad(const filename: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgScriptUnload(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgScriptRun(destline: Integer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgScriptStep(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgScriptBpToggle(line: Integer): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgScriptBpGet(line: Integer): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgScriptCmdExec(const command: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgScriptAbort(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP SCRIPTLINETYPE}function DbgScriptGetLineType(line: Integer): SCRIPTLINETYPE; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgScriptSetIp(line: Integer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgScriptGetBranchInfo(line: Integer;info: PSCRIPTBRANCH): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgSymbolEnum(base: duint;cbSymbolEnum: CBSYMBOLENUM;user: Pointer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgAssembleAt(addr: duint; const instruction: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP duint}   function DbgModBaseFromName(const name: PAChar): duint; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgDisasmAt(addr: duint;instr: PDISASM_INSTR); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function DbgStackCommentGet(addr: duint;comment: PSTACK_COMMENT):Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgGetThreadList(list: PTHREADLIST); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgSettingsUpdated(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgDisasmFastAt(addr: duint; basicinfo: PBASIC_INSTRUCTION_INFO); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure DbgMenuEntryClicked(hEntry: Integer); cdecl; external x32_BRIDGE;

Const
//Gui defines
	GUI_PLUGIN_MENU   = 0;
	GUI_DISASSEMBLY   = 0;
	GUI_DUMP          = 1;
	GUI_STACK         = 2;

	GUI_MAX_LINE_SIZE = 65536;
